--- a/sass/main.scss
+++ b/sass/main.scss
@@ -275,18 +275,11 @@
         p {
             margin: 5px 0px 20px 15px;font-size: 18px;
         }
-        .iconheart {
+        i {
             position: absolute;
             right: 30px;
             bottom: 35px;
             font-size: 30px;
-            color: $colour-primary
-        }
-        .iconpointer {
-            position: absolute;
-            right: 15px;
-            bottom: 15px;
-            font-size: 35px;
         }
     
     }
