--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,7 +378,20 @@ footer p i {
     margin: 0px 40px 0px 20px;
   }
   .sectionbottom {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
     margin-top: 30px;
+    height: 800px;
+  }
+  .sectionbottom .sectionbottom__cards {
+    max-width: 45%;
+    margin: 0px;
+    top: -10px;
+  }
+  .sectionbottom h2 {
+    margin: 0px;
   }
 }
 
