--- a/sass/main.scss
+++ b/sass/main.scss
@@ -409,7 +409,21 @@ footer {
         }
     }
     .sectionbottom {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        flex-wrap: wrap;
         margin-top: 30px;
+        height: 800px;
+
+        .sectionbottom__cards {
+            max-width: 45%;
+            margin: 0px;
+            top: -10px;
+        }
+        h2 {
+            margin: 0px;
+        }
     }
 }
 
