--- a/sass/menuf.scss
+++ b/sass/menuf.scss
@@ -94,14 +94,26 @@ main {
             padding: 13px;
             box-shadow: 2px 6px 20px 0px rgba(0, 0, 0, 0.101);
             margin-bottom: 20px;
-            p {
+            .description {
+                box-sizing: border-box;
                 margin-top: 5px;
                 display: flex;
                 justify-content: space-between;
+                transition: width 5s, background-color 2s;
+
+                p {
+                    display: block;
+                    height: 20px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+ 
+                }
                 
-                span {
+                .price {
                     margin-right: 5px;
                     font-weight: bold;
+                    margin-left: 2px;
                 }
             }
             &:hover {
@@ -112,12 +124,16 @@ main {
                 .anim i {
                     transform: rotate(0deg)
                 }
+                .description {
+                    width: 80%;
+                    background-color: red;
+                }
+
             }
             .anim {
-                content: "fa-solid fa-circle-check";
                 display: flex;
                 border-radius: 0px 15px 15px 0px;
-                width: 100px;              
+                width: 20%;              
                 height: 100%;
                 position: absolute;
                 top: 0px;
