--- a/public/css/menuf.css
+++ b/public/css/menuf.css
@@ -96,7 +96,7 @@ main section .plats .description {
   margin-top: 5px;
   display: flex;
   justify-content: space-between;
-  transition: width 5s, background-color 2s;
+  transition: margin-right 250ms;
 }
 main section .plats .description p {
   display: block;
@@ -117,13 +117,12 @@ main section .plats:hover .anim i {
   transform: rotate(0deg);
 }
 main section .plats:hover .description {
-  width: 80%;
-  background-color: red;
+  margin-right: 90px;
 }
 main section .plats .anim {
   display: flex;
   border-radius: 0px 15px 15px 0px;
-  width: 20%;
+  width: 90px;
   height: 100%;
   position: absolute;
   top: 0px;
