--- a/sass/menuf.scss
+++ b/sass/menuf.scss
@@ -99,7 +99,7 @@ main {
                 margin-top: 5px;
                 display: flex;
                 justify-content: space-between;
-                transition: width 5s, background-color 2s;
+                transition: margin-right 250ms; 
 
                 p {
                     display: block;
@@ -125,15 +125,14 @@ main {
                     transform: rotate(0deg)
                 }
                 .description {
-                    width: 80%;
-                    background-color: red;
+                    margin-right: 90px;
                 }
 
             }
             .anim {
                 display: flex;
                 border-radius: 0px 15px 15px 0px;
-                width: 20%;              
+                width: 90px;              
                 height: 100%;
                 position: absolute;
                 top: 0px;
