--- a/public/css/menus.css
+++ b/public/css/menus.css
@@ -91,6 +91,14 @@ main section .plats {
   box-shadow: 2px 6px 20px 0px rgba(0, 0, 0, 0.101);
   margin-bottom: 20px;
 }
+main section .plats h3 {
+  display: block;
+  height: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: margin-right 250ms;
+}
 main section .plats .description {
   box-sizing: border-box;
   margin-top: 5px;
@@ -117,6 +125,9 @@ main section .plats:hover .anim i {
   transform: rotate(0deg);
 }
 main section .plats:hover .description {
+  margin-right: 90px;
+}
+main section .plats:hover h3 {
   margin-right: 90px;
 }
 main section .plats .anim {
