--- a/sass/menus.scss
+++ b/sass/menus.scss
@@ -94,6 +94,16 @@ main {
             padding: 13px;
             box-shadow: 2px 6px 20px 0px rgba(0, 0, 0, 0.101);
             margin-bottom: 20px;
+                
+            h3 {
+                display: block;
+                height: 20px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                transition: margin-right 250ms; 
+            }
+
             .description {
                 box-sizing: border-box;
                 margin-top: 5px;
@@ -125,6 +135,9 @@ main {
                     transform: rotate(0deg)
                 }
                 .description {
+                    margin-right: 90px;
+                }
+                h3 {
                     margin-right: 90px;
                 }
 
