--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,6 @@
   border-radius: 30px;
   margin-top: 35px;
   padding: 15px 20px 15px 20px;
-  background: rgb(255, 121, 218);
   background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
   box-shadow: 2px 6px 11px 0px rgba(0, 0, 0, 0.252);
 }
@@ -225,10 +224,31 @@
   margin: 5px 0px 20px 15px;
   font-size: 18px;
 }
-.sectionbottom__firstcard i {
+.sectionbottom__firstcard .hearts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
   position: absolute;
   right: 30px;
   bottom: 35px;
+}
+.sectionbottom__firstcard .hearts:hover .emptyheart {
+  display: none;
+}
+.sectionbottom__firstcard .hearts:hover .fullheart {
+  display: block;
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.sectionbottom__firstcard .hearts .emptyheart {
+  font-size: 30px;
+}
+.sectionbottom__firstcard .hearts .fullheart {
+  display: none;
   font-size: 30px;
 }
 .sectionbottom__secondcard {
@@ -263,10 +283,31 @@
   margin: 5px 0px 20px 15px;
   font-size: 18px;
 }
-.sectionbottom__secondcard i {
+.sectionbottom__secondcard .hearts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
   position: absolute;
   right: 30px;
   bottom: 35px;
+}
+.sectionbottom__secondcard .hearts:hover .emptyheart {
+  display: none;
+}
+.sectionbottom__secondcard .hearts:hover .fullheart {
+  display: block;
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.sectionbottom__secondcard .hearts .emptyheart {
+  font-size: 30px;
+}
+.sectionbottom__secondcard .hearts .fullheart {
+  display: none;
   font-size: 30px;
 }
 .sectionbottom__thirdcard {
@@ -292,10 +333,31 @@
   margin: 5px 0px 20px 15px;
   font-size: 18px;
 }
-.sectionbottom__thirdcard i {
+.sectionbottom__thirdcard .hearts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
   position: absolute;
   right: 30px;
   bottom: 35px;
+}
+.sectionbottom__thirdcard .hearts:hover .emptyheart {
+  display: none;
+}
+.sectionbottom__thirdcard .hearts:hover .fullheart {
+  display: block;
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.sectionbottom__thirdcard .hearts .emptyheart {
+  font-size: 30px;
+}
+.sectionbottom__thirdcard .hearts .fullheart {
+  display: none;
   font-size: 30px;
 }
 .sectionbottom__fourthcard {
@@ -321,10 +383,31 @@
   margin: 5px 0px 20px 15px;
   font-size: 18px;
 }
-.sectionbottom__fourthcard i {
+.sectionbottom__fourthcard .hearts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
   position: absolute;
   right: 30px;
   bottom: 35px;
+}
+.sectionbottom__fourthcard .hearts:hover .emptyheart {
+  display: none;
+}
+.sectionbottom__fourthcard .hearts:hover .fullheart {
+  display: block;
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.sectionbottom__fourthcard .hearts .emptyheart {
+  font-size: 30px;
+}
+.sectionbottom__fourthcard .hearts .fullheart {
+  display: none;
   font-size: 30px;
 }
 
