--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,7 +77,7 @@
         border-radius: 30px;
         margin-top: 35px;
         padding:  15px 20px 15px 20px;
-        background: rgb(255,121,218);
+        // background: rgb(255,121,218);
         background: linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
         box-shadow: 2px 6px 11px 0px rgba(0, 0, 0, 0.252) ;
 
@@ -236,11 +236,36 @@
             margin: 5px 0px 20px 15px;
             font-size: 18px;
         }
-        i {
+        .hearts {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 35px;
+            width: 35px;
             position: absolute;
             right: 30px;
             bottom: 35px;
-            font-size: 30px;
+
+            &:hover {
+                .emptyheart {
+                    display: none;
+                 }
+                .fullheart {
+                    display: block;
+                    background: linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);              
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;      
+                }
+            }
+            .emptyheart {
+                font-size: 30px;
+             }
+            .fullheart {
+                display: none;
+                font-size: 30px;
+            }
+
         }
 
     }
@@ -275,11 +300,36 @@
         p {
             margin: 5px 0px 20px 15px;font-size: 18px;
         }
-        i {
+        .hearts {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 35px;
+            width: 35px;
             position: absolute;
             right: 30px;
             bottom: 35px;
-            font-size: 30px;
+
+            &:hover {
+                .emptyheart {
+                    display: none;
+                 }
+                .fullheart {
+                    display: block;
+                    background: linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);              
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;      
+                }
+            }
+            .emptyheart {
+                font-size: 30px;
+             }
+            .fullheart {
+                display: none;
+                font-size: 30px;
+            }
+
         }
     
     }
@@ -306,13 +356,37 @@
             margin: 5px 0px 20px 15px;
             font-size: 18px;
         }
-        i {
+        .hearts {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 35px;
+            width: 35px;
             position: absolute;
             right: 30px;
             bottom: 35px;
-            font-size: 30px;
-        }
 
+            &:hover {
+                .emptyheart {
+                    display: none;
+                 }
+                .fullheart {
+                    display: block;
+                    background: linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);              
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;      
+                }
+            }
+            .emptyheart {
+                font-size: 30px;
+             }
+            .fullheart {
+                display: none;
+                font-size: 30px;
+            }
+
+        }
     }
     &__fourthcard {
         position: relative;
@@ -338,11 +412,36 @@
             margin: 5px 0px 20px 15px;
             font-size: 18px;
         }
-        i {
+        .hearts {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 35px;
+            width: 35px;
             position: absolute;
             right: 30px;
             bottom: 35px;
-            font-size: 30px;
+
+            &:hover {
+                .emptyheart {
+                    display: none;
+                 }
+                .fullheart {
+                    display: block;
+                    background: linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);              
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;      
+                }
+            }
+            .emptyheart {
+                font-size: 30px;
+             }
+            .fullheart {
+                display: none;
+                font-size: 30px;
+            }
+
         }
 
     }
